<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_my_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.sourceedge.preco.myprofile.controller.MyProfile"
    tools:showIn="@layout/activity_my_profile"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_myprofile_name"
                android:padding="@dimen/dimen_10"
                android:id="@+id/textView2" />

            <EditText
                android:id="@+id/myprofile_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:background="@drawable/transparent_square_box"
                android:layout_marginLeft="@dimen/dimen_10"
                android:layout_marginRight="@dimen/dimen_10"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_myprofile_emailid"
                android:padding="@dimen/dimen_10"/>
            <EditText
                android:id="@+id/myprofile_emailid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:background="@drawable/transparent_square_box"
                android:layout_marginLeft="@dimen/dimen_10"
                android:layout_marginRight="@dimen/dimen_10"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_myprofile_password"
                android:padding="@dimen/dimen_10"/>
            <TextView
                android:id="@+id/myprofile_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="14dp"
                android:background="@drawable/transparent_square_box"
                android:layout_marginLeft="@dimen/dimen_10"
                android:layout_marginRight="@dimen/dimen_10"/>
            <TextView
                android:id="@+id/change_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Change password"
                android:textSize="@dimen/textview_16"
                android:textColor="@color/colorAccent"
                android:layout_gravity="right"
                android:padding="@dimen/dimen_10"/>
            <ImageView
                android:id="@+id/profile_pic"
                android:layout_width="@dimen/dimen_150"
                android:layout_height="@dimen/dimen_150"
                android:layout_gravity="center"
                android:background="@drawable/transparent_square_box"
                android:padding="@dimen/dimen_5"/>
            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="SELECT IMAGE"
                android:id="@+id/select_image"
                android:padding="@dimen/dimen_10"
                android:background="@color/colorPrimary"
                android:textColor="@color/colorWhite"
                android:layout_marginTop="@dimen/dimen_10"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_myprofile_age"
                android:padding="@dimen/dimen_10"/>
            <EditText
                android:id="@+id/myprofile_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:background="@drawable/transparent_square_box"
                android:layout_marginLeft="@dimen/dimen_10"
                android:layout_marginRight="@dimen/dimen_10"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_myprofile_gender"
                android:padding="@dimen/dimen_10"/>
            <EditText
                android:id="@+id/myprofile_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:background="@drawable/transparent_square_box"
                android:layout_marginLeft="@dimen/dimen_10"
                android:layout_marginRight="@dimen/dimen_10"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_myprofile_phoneno"
                android:padding="@dimen/dimen_10"/>
            <EditText
                android:id="@+id/myprofile_phoneno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:background="@drawable/transparent_square_box"
                android:layout_marginLeft="@dimen/dimen_10"
                android:layout_marginRight="@dimen/dimen_10"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Add new Phone No"
                android:layout_gravity="right"
                android:textSize="@dimen/textview_16"
                android:textColor="@color/colorAccent"
                android:padding="@dimen/dimen_10"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_myprofile_id"
                android:padding="@dimen/dimen_10"/>
            <EditText
                android:id="@+id/myprofile_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:background="@drawable/transparent_square_box"
                android:layout_marginLeft="@dimen/dimen_10"
                android:layout_marginRight="@dimen/dimen_10"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_myprofile_collegename"
                android:padding="@dimen/dimen_10"/>
            <EditText
                android:id="@+id/myprofile_collname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:background="@drawable/transparent_square_box"
                android:layout_marginLeft="@dimen/dimen_10"
                android:layout_marginRight="@dimen/dimen_10"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_myprofile_dept"
                android:padding="@dimen/dimen_10"/>
            <EditText
                android:id="@+id/myprofile_dept"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:background="@drawable/transparent_square_box"
                android:layout_marginLeft="@dimen/dimen_10"
                android:layout_marginRight="@dimen/dimen_10"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_myprofile_year"
                android:padding="@dimen/dimen_10"/>
            <EditText
                android:id="@+id/myprofile_year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:background="@drawable/transparent_square_box"
                android:layout_marginLeft="@dimen/dimen_10"
                android:layout_marginRight="@dimen/dimen_10"
                android:layout_marginBottom="@dimen/dimen_10"/>
            <Button
                android:id="@+id/button_save"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/title_myprofile_button_save"
                android:textColor="@color/colorWhite"
                android:background="@color/colorAccent"
                android:layout_marginBottom="@dimen/dimen_10"
                android:elevation="@dimen/dimen_10"/>
        </LinearLayout>
    </ScrollView>



</RelativeLayout>
