<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_mobile_verification"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.sourceedge.preco.register.controller.MobileVerification"
    tools:showIn="@layout/activity_mobile_verification"
    android:background="@color/colorWhite">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_mobile_verification"
            android:gravity="center"
            android:textSize="@dimen/textview_18"
            android:padding="@dimen/dimen_10"
            android:layout_marginTop="@dimen/dimen_80"/>
        <EditText
            android:id="@+id/enter_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title_enter_code"
            android:gravity="center"
            android:background="@drawable/transparent_square_box"
            android:layout_margin="@dimen/dimen_40"/>
        <Button
            android:id="@+id/button_submit"
            android:layout_width="@dimen/dimen_150"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:elevation="@dimen/dimen_10"
            android:background="@color/colorWhite"
            android:text="@string/submit_button_title"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Resend Code??"
            android:gravity="center"
            android:textSize="@dimen/textview_16"
            android:layout_marginTop="@dimen/dimen_20"
            android:padding="@dimen/dimen_10"/>
    </LinearLayout>
</RelativeLayout>
