<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent">

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/jobs_card_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            card_view:cardBackgroundColor="@color/colorWhite"
            card_view:cardCornerRadius="@dimen/dimen_5"
            card_view:cardElevation="@dimen/dimen_2"
            card_view:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_machine_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/dimen_10"
                        android:text="@string/machine_id"
                        android:textColor="@color/colorBlack"
                        android:textSize="18sp" />

                    <Button
                        android:id="@+id/btn_view"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBaseline="@id/tv_machine_id"
                        android:layout_alignEnd="@id/tv_machine_id"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignRight="@id/tv_machine_id"
                        android:padding="@dimen/dimen_10"
                        android:text="@string/view"
                        android:textColor="@color/colorPrimary" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBaseline="@+id/tv_machine_id"
                        android:layout_alignBottom="@+id/tv_machine_id"
                        android:layout_toEndOf="@+id/tv_machine_id"
                        android:layout_toRightOf="@+id/tv_machine_id"
                        android:text="I300"
                        android:textSize="18sp" />

                </RelativeLayout>


                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/Grey" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:baselineAligned="true"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:padding="@dimen/dimen_5">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/dimen_5"
                            android:text="@string/services"
                            android:textColor="@color/colorBlack"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/page_type"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingBottom="@dimen/dimen_2"
                            android:paddingEnd="@dimen/dimen_5"
                            android:paddingLeft="@dimen/dimen_5"
                            android:paddingStart="@dimen/dimen_5"
                            android:text="@string/service_type_pagetype" />

                        <TextView
                            android:id="@+id/page_size"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingBottom="@dimen/dimen_2"
                            android:paddingEnd="@dimen/dimen_5"
                            android:paddingLeft="@dimen/dimen_5"
                            android:paddingStart="@dimen/dimen_5"
                            android:text="@string/service_type_a4" />

                        <TextView
                            android:id="@+id/page_color"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingBottom="@dimen/dimen_2"
                            android:paddingEnd="@dimen/dimen_5"
                            android:paddingLeft="@dimen/dimen_5"
                            android:paddingStart="@dimen/dimen_5"
                            android:text="@string/service_type_color" />

                        <TextView
                            android:id="@+id/single_or_double"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingBottom="@dimen/dimen_2"
                            android:paddingEnd="@dimen/dimen_5"
                            android:paddingLeft="@dimen/dimen_5"
                            android:paddingStart="@dimen/dimen_5"
                            android:text="@string/service_type_single_double" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:padding="@dimen/dimen_5">

                            <TextView
                                android:id="@+id/date"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="@dimen/dimen_5"
                                android:text="@string/date"
                                android:textColor="@color/colorBlack" />


                            <TextView
                                android:id="@+id/time"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="@dimen/dimen_5"
                                android:text="@string/time"
                                android:textColor="@color/colorBlack" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:padding="@dimen/dimen_5">

                            <TextView
                                android:id="@+id/tv_date"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="@dimen/dimen_5"
                                android:text="12-02-2017" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="@dimen/dimen_5"
                                android:text="13:50" />

                        </LinearLayout>

                        <!--<TextView
                            android:id="@+id/forms_confirm"
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:layout_gravity="end|bottom"
                            android:clickable="true"
                            android:gravity="center"
                            android:paddingRight="@dimen/dimen_15"
                            android:paddingTop="@dimen/activity_vertical_margin"
                            android:text="@string/confirm"
                            android:textAlignment="center"
                            android:textColor="@color/colorPrimary" />-->

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</FrameLayout>